# rusty-maschine

./: .gitignore  Cargo.toml  README.md
src/: colour.rs  controller.rs  events.rs  logo.rs  main.rs  maschine_mikro_mk2.rs  pad.rs
src/controller/: colour.rs  constants.rs  display.rs  error.rs  font.rs
src/devices/: maschine_mikro_mk2.rs  mod.rs
src/gui/: display.rs  font.rs  logo.rs  mod.rs
src/gui/font/: mod.rs  nx5.rs  nx6.rs
src/gui/ui/: display.rs  list_panel.rs  mod.rs  tab_panel.rs  text_panel.rs
tools/: .gitattributes  5x7-Font.xcf  Cargo.toml  font-gen.rs
tools/src/: bitmap.rs  font-gen.rs
